src/test/resources/errors/cfg/trivial.c.expected.txt
na.okutane.cpp.ParseException: resultCode = [1], error = [/errors/cfg/trivial.c:1:1: error: unknown type name 'a'
a
^
/errors/cfg/trivial.c:1:2: error: expected identifier or '('
a
 ^
2 errors generated.
]